# vxsuite

./: .dockerignore  .env  .env.production  .gitignore  .lintstagedrc.cjs  .lintstagedrc.js  .lintstagedrc.shared.cjs  .lintstagedrc.shared.js  .npmrc  .pnpmfile.cjs  .prettierignore  .prettierrc.js  .yarnrc  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.quickresults  Dockerfile.vxdesign  README.md  SECURITY.md  STRAIGHT_PARTY_POC_REPORT.md  VirtualMachineSetup-deprecated.md  VirtualMachineSetup.md  app.json  bun.lockb  clippy.toml  esbuild-runner.config.js  go.mod  go.sum  heroku.yml  jest.config.shared.js  mise.toml  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpmfile.js  prune_repo.js  remove-imports.rb  (+12 more)
apps/mark-scan/accessible-controller/: Cargo.toml  Makefile  README.md
apps/mark-scan/fai-100-controller/: Cargo.toml  Makefile  README.md
apps/mark-scan/pat-device-input/: Cargo.toml  Makefile
apps/pollbook/barcode-scanner-daemon/: Cargo.toml  Makefile  README.md
libs/ballot-encoder/: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  Cargo.toml  README.md  eslint.config.mjs  jest.config.js  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.mts  vitest.config.ts
libs/ballot-encoder-rs/: Cargo.toml
libs/ballot-encoder-rs/src/: coding.rs  hmpb.rs  lib.rs  types.rs
libs/ballot-encoder/.circleci/: config.yml
libs/ballot-encoder/npm/: index.test.ts  index.ts  stats.test.ts
libs/ballot-encoder/src/: README.md  bit_reader.rs  bit_writer.rs  election.test.ts  election.ts  index.test.mts  index.test.ts  index.ts  lib.rs  schema.test.ts  schema.ts  stats.test.mts  stats.test.ts  types.ts  v3.ts
libs/ballot-encoder/test/: expect.ts  fuzz.test.mts  fuzz.test.ts  utils.mts  utils.ts
libs/ballot-interpreter/: .eslintignore  .lintstagedrc.js  Cargo.toml  README.md  dts-header.d.ts  expected-failures.txt  index.d.ts  index.js  jest.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
libs/ballot-interpreter-nh-next/: .eslintrc.json  .gitignore  Cargo.toml  README.md  bacon.toml  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
libs/ballot-interpreter-nh-next/src/: ballot_card.rs  debug.rs  election.rs  geometry.rs  grid.rs  image_utils.rs  interpret.rs  layout.rs  lib.rs  main.rs  metadata.rs  ovals.rs  scoring.rs  timing_marks.rs  types.rs
libs/ballot-interpreter/benches/: main.rs
libs/ballot-interpreter/benchmarks/: benchmarking.ts  interpret_bmd.bench.mts  interpret_bmd.bench.ts  interpret_hmpb.bench.mts  interpret_hmpb.bench.ts  jest.config.js  vitest.config.mts  vitest.config.ts  write_image.bench.ts
libs/ballot-interpreter/examples/: compare-strategies.rs
libs/ballot-interpreter/src/: adjudication_reasons.test.mts  adjudication_reasons.test.ts  adjudication_reasons.ts  ballot_interpretation.test.ts  cross_language_bmd.test.ts  find_timing_mark_grid.test.ts  index.ts  interpret.test.ts  interpret.ts  interpret_all_bubble_ballot.test.mts  interpret_all_bubble_ballot.test.ts  interpret_and_save_files.test.mts  interpret_and_save_files.test.ts  interpret_and_save_files.ts  interpret_blank_sheet.test.ts  interpret_bmd_and_hmp_ballots.test.mts  interpret_bmd_and_hmp_ballots.test.ts  interpret_bmd_ballots.test.mts  interpret_bmd_ballots.test.ts  interpret_nh_hmpb.test.mts  interpret_nh_hmpb.test.ts  interpret_summary_and_bubble_ballots.test.ts  interpret_summary_ballots.test.ts  interpret_vx_bubble_ballot.test.ts  interpret_vx_hmpb.test.mts  interpret_vx_hmpb.test.ts  legacy_adapter.ts  options.ts  save_images.test.mts  save_images.test.ts  save_images.ts  setupTests.ts  should_skip_summary_ballot_interpretation.test.ts  should_skip_summary_ballot_interpretation.ts  types.ts  validation.test.mts  validation.test.ts  validation.ts
libs/browser/: Cargo.toml  kiosk.js  types.d.ts
libs/browser/src/: device.rs  ipc.rs  keybindings.rs  main.rs  options.rs
libs/hardware-scan-diagnostic/: .eslintignore  .gitignore  .npmignore  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts
libs/hardware-scan-diagnostic/src/: debug.rs  js.rs  lib.rs  line_fitting.rs  shape.rs
libs/hardware-scan-diagnostic/test/: index.test.ts  setup_custom_matchers.ts
libs/hmpb-render/: Cargo.toml
libs/hmpb-render/src/: html_to_typst.rs  main.rs  preprocess.rs  world.rs
libs/hmpb-render/templates/: ballot.typ
libs/hmpb-typst/: .eslintignore  .eslintrc.json  Cargo.toml  TODO.md  index.d.ts  index.js  package.json
libs/hmpb-typst/src/: lib.rs  render.rs  text.rs
libs/image-utils-rs/: Cargo.toml  README.md  jest.config.js  package.json  tsconfig.build.json  tsconfig.json
libs/image-utils-rs/src/: adjudication_reasons.test.ts  adjudication_reasons.ts  index.ts  interpret_all_bubble_ballot.test.ts  interpret_nh_hmpb.test.ts
libs/logging-utils/: .eslintignore  .lintstagedrc.cjs  .lintstagedrc.js  Cargo.toml  README.md  eslint.config.mjs  index.d.ts  index.js  package.json  tsconfig.json
libs/logging-utils/src/: cdf.rs  convert.rs  lib.rs  ser.rs  stream.rs  vx.rs
libs/logging-utils/test/: index.test.ts  zellij-layout.kdl
libs/pdf-renderer/: .gitignore  .lintstagedrc.js  Cargo.toml  build.rs  index.d.ts  index.js  package.json  tsconfig.json  vitest.config.ts
libs/pdf-renderer/src/: diff.rs  dom.rs  fonts.rs  layout.rs  lib.rs  paint.rs  style.rs
libs/pdf-renderer/tests/: visual_comparison.rs
libs/pdi-rs/: .gitignore  Cargo.toml  README.md  bacon.toml  libusb-example  libusb-example.c  package.json  tsconfig.build.json  tsconfig.json
libs/pdi-rs/examples/: get_test_string.rs  scan_forever.rs
libs/pdi-rs/src/: client.rs  get_custom_status.rs  get_pdi_status.rs  lib.rs  libusb_example.rs  main.rs  parse_traffic.rs  pdi_client.rs  scanner.rs
libs/pdi-scanner/: .eslintignore  .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  jest.config.js  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
libs/types-rs/: Cargo.toml  package.json
(+22111 files in other folders)
