[workspace]
resolver = "2"
members = [
    "apps/mark-scan/accessible-controller",
    "apps/mark-scan/daemon-utils",
    "apps/mark-scan/fai-100-controller",
    "apps/mark-scan/pat-device-input",
    "libs/ballot-interpreter",
    "libs/hardware-scan-diagnostic",
    "libs/logging",
    "libs/logging-utils",
    "libs/pdi-scanner",
    "libs/types-rs",
]

[workspace.package]
license = "GPL-3.0-only"
license-file = "LICENSE"

[workspace.dependencies]
ab_glyph = "0.2.23"
anyhow = "1.0.75"
base64 = "0.22.0"
bitstream-io = "4.0.0"
chrono = "0.4.31"
clap = { version = "4.0.29", features = ["cargo", "derive", "env"] }
color-eyre = "0.6.2"
crc16 = "0.4.0"
crossterm = "0.27.0"
csv = "1.3.0"
ctrlc = "3.4.2"
divan = "0.1.15"
flate2 = "1.1.1"
hex = "0.4.3"
image = "0.25.0"
imageproc = "0.24.0"
itertools = "0.12.1"
libc = "0.2.153"
log = "0.4.17"
vx-logging = { path = "libs/logging" }
daemon-utils = { path = "apps/mark-scan/daemon-utils" }
napi = { version = "2.16.17", default-features = false, features = [
    "napi4",
    "async",
] }
napi-build = "2.1.6"
napi-derive = "2.16.13"
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
nom = "7.1.3"
num_enum = "0.7.1"
pretty_env_logger = "0.5.0"
proptest = "1.0.0"
psutil = "3.3.0"
rand = "0.8.5"
rayon = "1.5.3"
rqrr = "0.7.1"
rusb = "0.9.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serialport = "4.2.2"
static_assertions = "1.1.0"
tempfile = "3.3.0"
thiserror = "1.0.50"
tokio = { version = "1.44.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
types-rs = { path = "libs/types-rs" }
uinput = "0.1.3"
users = "0.11.0"
zbar-rust = "0.0.23"

[workspace.lints.rust]
dead_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
