[workspace]
resolver = "2"
members = [
  "apps/mark-scan/accessible-controller",
  "apps/mark-scan/daemon-utils",
  "apps/mark-scan/fai-100-controller",
  "apps/mark-scan/pat-device-input",
  "apps/pollbook/barcode-scanner-daemon",
  "libs/logging",
  "libs/logging-utils",
]
exclude = [
  "libs/ballot-interpreter",
  "libs/hmpb-typst",
  "libs/pdi-scanner",
  "libs/types-rs",
]

[workspace.package]
license = "GPL-3.0-only"
license-file = "LICENSE"

[workspace.dependencies]
chrono = "0.4.31"
clap = { version = "4.0.29", features = ["derive", "env"] }
color-eyre = "0.6.2"
crc16 = "0.4.0"
ctrlc = "3.4.2"
flate2 = "1.1.1"
vx-logging = { path = "libs/logging" }
daemon-utils = { path = "apps/mark-scan/daemon-utils" }
napi = { version = "3.8.0", default-features = false, features = [
  "napi4",
  "async",
  "serde-json",
] }
napi-build = "2.3.1"
napi-derive = "3.5.2"
nix = "0.26"
num_enum = "0.7.1"
nusb = "0.1.14"
proptest = "1.0.0"
rusb = "0.9.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serialport = "4.2.2"
thiserror = "1.0.50"
tokio = { version = "1.44.2", features = ["fs", "signal", "io-std", "io-util"] }
tokio-serial = { version = "5.4.1" }
tokio-test = { version = "0.4.4" }
uinput = "0.1.3"

[workspace.lints.rust]
dead_code = "deny"
unused_assignments = "deny"
unused_imports = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
