[package]
name = "ballot-encoder-rs"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bitstream-io.workspace = true
bitter.workspace = true
hex.workspace = true
image.workspace = true
serde.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
types-rs.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
