[package]
name = "ballot-interpreter-nh-next"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2018"
exclude = ["build/rust-addon.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
image = "0.24.5"
imageproc = "0.23.0"
log = "0.4.17"
logging_timer = "1.1.0"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"
rusttype = "0.9.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
itertools = "0.10.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
proptest = "1.0.0"
tempfile = "3.3.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
