[package]
name = "ballot-interpreter"
version = "0.1.0"
edition = "2021"
exclude = ["build/addon.node"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/bubble-ballot-rust/lib.rs"

[[bin]]
name = "interpret"
path = "bin/interpret.rs"

[[bin]]
name = "debug-timing-marks"
path = "bin/debug-timing-marks.rs"

[[bench]]
name = "main"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { workspace = true }
bitstream-io = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
log = { workspace = true }
neon = { workspace = true }
pretty_env_logger = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
itertools = { workspace = true }
rqrr = { workspace = true }
zedbar = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
types-rs = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
