[workspace]
resolver = "2"

[workspace.package]
license = "GPL-3.0-only"

[workspace.lints.rust]
dead_code = "deny"
unused_assignments = "deny"
unused_imports = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[package]
name = "ballot-interpreter"
version = "0.1.0"
edition = "2021"
exclude = ["build/addon.node"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/bubble-ballot-rust/lib.rs"

[[bin]]
name = "interpret"
path = "bin/interpret.rs"

[[bin]]
name = "debug-timing-marks"
path = "bin/debug-timing-marks.rs"

[[bench]]
name = "main"
harness = false

[dependencies]
ab_glyph = "0.2.23"
clap = { version = "4.0.29", features = ["derive", "env"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
image = { version = "0.25.0", default-features = false, features = ["png", "jpeg", "rayon"] }
log = "0.4.17"
napi = { version = "3.8.0", default-features = false, features = ["napi4", "async", "serde-json", "dyn-symbols"] }
napi-derive = "3.5.2"
rayon = "1.5.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_with = { version = "3.14.0", features = ["macros"] }
itertools = "0.12.1"
rqrr = "0.7.1"
zedbar = "0.2.1"
base64 = "0.22.0"
thiserror = "1.0.50"
tokio = { version = "1.44.2", features = ["fs", "macros", "signal", "io-std", "io-util"] }
types-rs = { path = "../types-rs" }

[build-dependencies]
napi-build = "2.3.1"

[dev-dependencies]
divan = "0.1.15"
proptest = "1.0.0"
tempfile = "3.3.0"

[lints]
workspace = true
