[package]
name = "browser"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
base64-serde = { workspace = true }
cairo-rs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
gtk = { workspace = true }
javascriptcore-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
webkit2gtk = { workspace = true }

[lints]
workspace = true
