[workspace]
resolver = "2"

[package]
name = "hmpb-render"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hmpb-render"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
comemo = "0.5"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typst = "0.14"
typst-library = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"

[lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
