[package]
name = "image-utils"
version = "0.1.0"
license = "AGPL-3.0"
edition = "2021"
exclude = ["build/rust_addon.node"]

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { workspace = true }
image = { workspace = true }
neon = { workspace = true }
itertools = { workspace = true }
types-rs = { workspace = true }
pdfium-render = {workspace = true }

[lints]
workspace = true
