[package]
edition = "2021"
name = "logging-utils"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
vx-logging.workspace = true

[build-dependencies]
napi-build.workspace = true
