[package]
name = "pdi-rs"
version = "0.1.0"
edition = "2021"
exclude = ["build/rust_addon.node"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "pdi"
path = "src/main.rs"

[[bin]]
name = "custom-get-status"
path = "src/get_custom_status.rs"

[[bin]]
name = "pdi-get-status"
path = "src/get_pdi_status.rs"

[[bin]]
name = "libusb-example"
path = "src/libusb_example.rs"

[[bin]]
name = "parse-traffic"
path = "src/parse_traffic.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { workspace = true }
color-eyre = { workspace = true }
crc16 = { workspace = true }
csv = { workspace = true }
crossterm = "0.27.0"
image = { version = "0.24.7", default-features = false, features = [
    "bmp",
    "jpeg",
] }
lazy_static = "1.4.0"
neon = { workspace = true }
neon-serde3 = { workspace = true }
nom = "7.1.3"
psutil = "3.3.0"
rand = "0.8.5"
ratatui = "0.23.0"
rayon = "1.5.3"
rusb = "0.9.3"
serde = { workspace = true }
serde_bytes = "0.11.14"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
users = "0.11.0"
