[package]
name = "pdi-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdi_scanner"
path = "src/rust/lib.rs"

[[bin]]
name = "pdictl"
path = "src/rust/main.rs"

[[bin]]
name = "pdi-parse-traffic"
path = "src/rust/parse_traffic.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitter = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
crc16 = { workspace = true }
csv = { workspace = true }
ctrlc = { workspace = true }
crossterm = { workspace = true }
image = { workspace = true }
libc = { workspace = true }
nom = { workspace = true }
psutil = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rusb = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.14"
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
users = { workspace = true }
