[package]
name = "pdi-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdi_scanner"
path = "src/rust/lib.rs"

[[bin]]
name = "pdictl"
path = "src/rust/main.rs"

[[bin]]
name = "pdi-parse-traffic"
path = "src/rust/parse_traffic.rs"

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
image = { workspace = true }
nom = { workspace = true }
nusb = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }

[lints]
workspace = true
