[workspace]
resolver = "2"

[workspace.package]
license = "GPL-3.0-only"

[workspace.lints.rust]
dead_code = "deny"
unused_assignments = "deny"
unused_imports = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release.package.pdi-scanner]
debug = "line-tables-only" # Enable stack traces

[package]
name = "pdi-scanner"
version = "0.1.0"
edition = "2021"

[lib]
name = "pdi_scanner"
path = "src/rust/lib.rs"

[[bin]]
name = "pdictl"
path = "src/rust/main.rs"

[[bin]]
name = "pdi-parse-traffic"
path = "src/rust/parse_traffic.rs"

[dependencies]
base64 = "0.22.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
color-eyre = "0.6.2"
csv = "1.3.0"
image = { version = "0.25.0", default-features = false, features = ["png", "jpeg", "rayon"] }
nom = "8.0.0"
nusb = "0.1.14"
rayon = "1.5.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.89"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.44.2", features = [
  "fs",
  "signal",
  "io-std",
  "io-util",
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }

[lints]
workspace = true
