[package]
name = "controllerd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "controllerd"
path = "src/controllerd.rs"

[dependencies]
color-eyre = { workspace = true }
crc16 = { workspace = true }
ctrlc = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serialport = { workspace = true }
thiserror = { workspace = true }
vx-logging = { workspace = true }
uinput = { workspace = true }

[lints]
workspace = true
