[package]
name = "patinputd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patinputd"
path = "src/patinputd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
ctrlc = { workspace = true }
daemon-utils = { workspace = true }
uinput = { workspace = true }
vx-logging = { workspace = true }
