[package]
name = "patinputd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "patinputd"
path = "src/patinputd.rs"

[dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
daemon-utils = { workspace = true }
uinput = { workspace = true }
vx-logging = { workspace = true }

[lints]
workspace = true
